# thunderbird-release-tools

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
hg-client/: Cargo.toml  LICENSE  README.md
hg-client/docs/: design.md  progress.md
hg-client/src/: connection.rs  error.rs  process.rs  protocol.rs
hg-client/src/api/: mod.rs
hg-client/tests/: integration.rs
mach/: Cargo.toml
mach/src/: commands.rs  lib.rs
release/: Cargo.toml
release-cli/: Cargo.toml
release-cli/src/: cli.rs  commands.rs  main.rs  pin.rs  repo.rs  utils.rs
release/src/: channel.rs  cli.rs  commands.rs  error.rs  main.rs  pin.rs  repo.rs  utils.rs
releases/cli/hg-client/src/: connection.rs  lib.rs  protocol.rs
releases/cli/hg-client/src/api/: types.rs
releases/cli/mach/src/: commands.rs  error.rs  lib.rs
releases/cli/thunderbird-release/: Cargo.toml  README.md
releases/cli/thunderbird-release/src/: cli.rs  error.rs  repo.rs  utils.rs
releases/scripts/: README.md  bump.sh  pin.sh  uplift.sh
