[workspace]
resolver = "3"
members = [
  "releases/cli/thunderbird-release",
  "releases/cli/hg-client",
  "releases/cli/mach",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
