[package]
name = "hg-cmdserver"
version = "0.1.0"
edition = "2024"
description = "A Rust client for the Mercurial command server protocol"
license = "MIT"

[dependencies]
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
