[package]
name = "hg-cmdserver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Rust client for the Mercurial command server protocol"
license = "MIT"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
