[package]
name = "release"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }
hg-cmdserver = { path = "../hg-client" }
mach = { path = "../mach" }
