[package]
name = "thunderbird-release-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A CLI for automating Thunderbird release cuts"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hg-cmdserver = { path = "../hg-client" }
mach = { path = "../mach" }

anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = { version = "3.3.0", features = ["json"] }
